browser/themes/shared/tabbrowser/tabs.css
/* ... */
.tab-background {
  border-radius: var(--tab-border-radius);
  margin-block: var(--tab-block-margin);
  min-height: var(--tab-min-height);
  outline: var(--tab-outline);
  outline-offset: var(--tab-outline-offset);

  .tabbrowser-tab:hover > .tab-stack > &:not([selected], [multiselected]) {
    background-color: var(--tab-background-color-hover);
    outline-color: var(--tab-hover-outline-color);
  }

  &:is([selected], [multiselected]) {
    background-color: var(--tab-background-color-selected);
    outline-color: var(--tab-selected-outline-color);
    box-shadow: var(--tab-selected-shadow);
  }

  &:is([selected]:not([multiselected])) {
    /* The below lines are required for dark, light, and
      system themes to achieve the gradient border appearance */
    /* stylelint-disable-next-line media-query-no-invalid */
    @media (not ((forced-colors) or (-moz-native-theme))) and (-moz-pref("browser.nova.enabled")) {
      :root:not([lwtheme]) & {
        border: 1px solid transparent;
        background:
          linear-gradient(var(--tab-background-color-selected)) padding-box,
          var(--tab-border-color-accent) border-box;
      }
    }
  }

  &[multiselected] {
    outline-color: var(--focus-outline-color);

    &[selected] {
      outline-width: 2px;
      outline-offset: -2px;
    }
  }

  #tabbrowser-tabs[orient="vertical"] & {
    .tabbrowser-tab[small-stack] > .tab-stack > & {
      box-shadow:
        0 5px 0 -3px var(--tab-background-color-selected),
        0 3px var(--tab-dragover-outline-color);
    }

    .tabbrowser-tab[big-stack] > .tab-stack > & {
      box-shadow:
        0 5px 0 -3px var(--tab-background-color-selected),
        0 3px var(--tab-dragover-outline-color),
        0 8px 0 -3px var(--tab-background-color-selected),
        0 6px var(--tab-dragover-outline-color);
    }
  }

  #tabbrowser-tabs[orient="horizontal"] & {
    .tabbrowser-tab[small-stack] > .tab-stack > & {
      box-shadow:
        5px 0 0 -3px var(--tab-background-color-selected),
        3px 0 var(--tab-dragover-outline-color);
    }

    .tabbrowser-tab[big-stack] > .tab-stack > & {
      box-shadow:
        5px 0 0 -3px var(--tab-background-color-selected),
        3px 0 var(--tab-dragover-outline-color),
        8px 0 0 -3px var(--tab-background-color-selected),
        6px 0 var(--tab-dragover-outline-color);
    }

    &:-moz-locale-dir(rtl) {
      .tabbrowser-tab[small-stack] > .tab-stack > & {
        box-shadow:
          -5px 0 0 -3px var(--tab-background-color-selected),
          -3px 0 var(--tab-dragover-outline-color);
      }

      .tabbrowser-tab[big-stack] > .tab-stack > & {
        box-shadow:
          -5px 0 0 -3px var(--tab-background-color-selected),
          -3px 0 var(--tab-dragover-outline-color),
          -8px 0 0 -3px var(--tab-background-color-selected),
          -6px 0 var(--tab-dragover-outline-color);
      }
    }
  }

  #tabbrowser-tabs[movingtab] & {
    transition:
      background-color 50ms ease,
      color 50ms ease,
      outline-color 50ms ease;
  }

  #tabbrowser-tabs[movingtab-group] & {
    &[dragover-groupTarget] {
      background-color: light-dark(var(--dragover-tab-group-color-pale), var(--dragover-tab-group-color));
      color: light-dark(var(--dragover-tab-group-color), var(--dragover-tab-group-color-pale));
      outline-color: light-dark(var(--dragover-tab-group-color), var(--dragover-tab-group-color-pale));

      /* stylelint-disable-next-line media-query-no-invalid */
      @media -moz-pref("browser.nova.enabled") {
        background-color: var(--dragover-tab-group-color-invert);
        color: currentColor;
        outline-color: var(--dragover-tab-group-color);
        outline-width: 2px;
      }
    }

    &:is([selected], [multiselected]) {
      /* stylelint-disable-next-line media-query-no-invalid */
      @media not -moz-pref("browser.nova.enabled") {
        outline-color: var(--dragover-tab-group-color);
        outline-width: 2px;
        outline-offset: -2px;
      }
    }
  }
}

/* Keyboard focus outline */

#TabsToolbar #firefox-view-button:focus-visible > .toolbarbutton-icon,
#tabbrowser-tabs[tablist-has-focus] .tabbrowser-tab.tablist-keyboard-focus > .tab-stack > .tab-background {
  outline: var(--focus-outline);
  outline-offset: var(--focus-outline-inset);
}

/* Pinned tabs */

.tabbrowser-tab:is([image], [pinned]) > .tab-stack > .tab-content[attention]:not([selected]),
.tabbrowser-tab > .tab-stack > .tab-content[pinned][titlechanged]:not([selected]),
#tabbrowser-tabs[orient="vertical"] .tabbrowser-tab > .tab-stack > .tab-content[titlechanged]:not([selected]) {
  background-image: radial-gradient(circle, var(--tab-attention-dot-color), var(--tab-attention-dot-color) 2px, transparent 2px);
  background-position: center bottom 6.5px;
  background-size: 4px 4px;
  background-repeat: no-repeat;

  #tabbrowser-tabs[orient="vertical"] & {
    background-position-y: 6px;
    background-position-x: calc(var(--tab-inline-padding) + var(--icon-size) + 1px);

    &:-moz-locale-dir(rtl) {
      background-position-x: right calc(var(--tab-inline-padding) + var(--icon-size) + 1px);
    }

    :root:not([sidebar-expand-on-hover]) &[pinned] {
      background-position-x: calc(50% + 11px);

      &:-moz-locale-dir(rtl) {
        background-position-x: calc(50% - 11px);
      }
    }
  }
}

.tabbrowser-tab[image] > .tab-stack > .tab-content[attention]:not([pinned], [selected]) {
  background-position-x: left calc(var(--tab-inline-padding) + 6px);

  &:-moz-locale-dir(rtl) {
    background-position-x: right calc(var(--tab-inline-padding) + 6px);
  }
}

.tab-label[attention]:not([selected]) {
  font-weight: var(--font-weight-bold);
}

#pinned-tabs-container[orient="horizontal"] {
  max-width: max(80px, calc(100vw - var(--window-controls-size) - 300px /* Room for toolbar buttons, drag space, and unpinned tabs */));

  &:empty {
    display: none;
  }
}
/* ... */

