Bug 2026252 - Show container tabs correctly when Nova design tokens are enabled r=tabbrowser-reviewers,sclements
As the border radius for tabs is now set to 9999px, the previous margin math no longer
works as expected. This fix removes the need for this and adjusts the
context line position so as not to cover the selected tab outline. This
seems to play nice with the vertical scrollbar since its now translucent.

Differential Revision: https://phabricator.services.mozilla.com/D299730

UltraBlame original commit: 549cb62630cb79f37a2201ae0933325203f47681

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -924,6 +924,11 @@ tab-split-view-wrapper[dragtarget] {
   outline: var(--tab-outline);
   outline-offset: var(--tab-outline-offset);
 
+  /* stylelint-disable-next-line media-query-no-invalid */
+  @media -moz-pref("browser.nova.enabled") {
+    border: 1px solid transparent;
+  }
+
   .tabbrowser-tab:hover > .tab-stack > &:not([selected], [multiselected]) {
     background-color: var(--tab-background-color-hover);
     outline-color: var(--tab-hover-outline-color);
@@ -941,7 +946,6 @@ tab-split-view-wrapper[dragtarget] {
     /* stylelint-disable-next-line media-query-no-invalid */
     @media (not ((forced-colors) or (-moz-native-theme))) and (-moz-pref("browser.nova.enabled")) {
       :root:not([lwtheme]) & {
-        border: 1px solid transparent;
         background:
           linear-gradient(var(--tab-background-color-selected)) padding-box,
           var(--tab-border-color-accent) border-box;
